# painel-jt

./: LICENSE  README.md  limpeza_dados.ipynb  main.py  pyproject.toml
data/: Base_de_Dados_JT_Historico_Limpa.parquet
notebooks/: main.ipynb
