[project]
name = "painel-jt-claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "streamlit>=1.59.1",
]
